--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,37 @@
+beautifulsoup4==4.7.1
+bokeh==1.1.0
+branca==0.3.1
+certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+folium==0.8.3
+GDAL==2.4.1
 gunicorn==19.9.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lxml==4.3.3
 MarkupSafe==1.1.1
+mysql-connector==2.2.9
+nose==1.3.7
+numpy==1.16.3
+opencv-python==4.1.0.25
+packaging==19.0
+pandas==0.24.2
+pandas-datareader==0.7.0
+Pillow==6.0.0
+protobuf==3.7.1
+psycopg2==2.8.2
+pyparsing==2.4.0
+python-dateutil==2.8.0
+pytz==2019.1
+PyYAML==5.1
+requests==2.22.0
+six==1.12.0
+soupsieve==1.9.1
+tornado==6.0.2
+urllib3==1.25.2
 Werkzeug==0.15.4
-bokeh==1.1.0
+wrapt==1.11.1
+xlrd==1.2.0
